log.txt
ast/ASTAdd.java:4: error: cannot find symbol
class ASTAdd extends SimpleNode {
                     ^
  symbol: class SimpleNode
./Fac.java:7: error: duplicate class: ast.Fac
public class Fac/*@bgen(jjtree)*/implements FacTreeConstants, FacConstants {/*@bgen(jjtree)*/
       ^
ast/ASTAdd.java:9: error: cannot access Fac
  public ASTAdd(Fac p, int id) {
                ^
  bad source file: ./Fac.java
    file does not contain class Fac
    Please remove or make sure it appears in the correct subdirectory of the sourcepath.
ast/ASTAnd.java:4: error: cannot find symbol
class ASTAnd extends SimpleNode {
                     ^
  symbol: class SimpleNode
ast/ASTClassDeclaration.java:4: error: cannot find symbol
class ASTClassDeclaration extends SimpleNode {
                                  ^
  symbol: class SimpleNode
ast/ASTAdd.java:12: error: method does not override or implement a method from a supertype
  @Override
  ^
ast/ASTAnd.java:12: error: method does not override or implement a method from a supertype
  @Override
  ^
ast/ASTClassDeclaration.java:22: error: method does not override or implement a method from a supertype
  @Override
  ^
ast/Fac.java:128: error: cannot access ASTClassDeclaration
                           ASTClassDeclaration jjtn000 = new ASTClassDeclaration(JJTCLASSDECLARATION);
                           ^
  bad class file: ./ast/ASTClassDeclaration.class
    class file contains wrong class: ASTClassDeclaration
    Please remove or make sure it appears in the correct subdirectory of the classpath.
ast/Fac.java:857: error: cannot access ASTAnd
                ASTAnd jjtn001 = new ASTAnd(JJTAND);
                ^
  bad class file: ./ast/ASTAnd.class
    class file contains wrong class: ASTAnd
    Please remove or make sure it appears in the correct subdirectory of the classpath.
ast/Fac.java:1060: error: cannot access ASTAdd
                ASTAdd jjtn001 = new ASTAdd(JJTADD);
                ^
  bad class file: ./ast/ASTAdd.class
    class file contains wrong class: ASTAdd
    Please remove or make sure it appears in the correct subdirectory of the classpath.
11 errors
